Update links in tasks description

--- a/zadanie-1/index.html
+++ b/zadanie-1/index.html
@@ -13,12 +13,16 @@
   <header>
     <h1>Zadanie 1 - banner</h1>
     <p>Stwórz banner w formacie 300x250. Wylosuj z pliku JSON cztery oferty.
-    Układ bannera ma być taki jak na załączonym przykładzie (banner.jpg).
+    Układ bannera ma być taki jak na załączonym przykładzie (banner.jpg):
+      <a href="./banner.jpg">
+        link do pliku JPG
+      </a>
+    </p>
     <p>Dodaj animacje "skaczącej ramki" - co dwie sekundy border oferty 
     ma przeskakiwać na następną.
     Z ostatniej oferty ramka powinna przeskakiwać z powrotem na pierwszą.</p>
     <p>Obrazki i cena + waluta powinny być zaczytywane z pliku JSON:
-      <a href="http://rekrutacjartb.pl/developer/banner.json">
+      <a href="./banner.json">
         link do pliku JSON
       </a>
     </p>
