--- a/zadanie-2/index.html
+++ b/zadanie-2/index.html
@@ -12,10 +12,14 @@
     <h1>Zadanie 2 - banner</h1>
     <p>Stwórz banner w formacie 160x600.</p>
     <p>Wylosuj z pliku JSON trzy oferty.</p>
-    <p>Układ bannera ma być taki jak na załączonym przykładzie (banner.jpg). </p>
+    <p>Układ bannera ma być taki jak na załączonym przykładzie (banner.jpg): 
+      <a href="./banner.jpg">
+        link do pliku JPG
+      </a>
+    </p>
     <p>Banner powinien być w formie slidera.</p>
     <p>Dane powinny być zaczytywane z pliku JSON: 
-      <a href="http://rekrutacjartb.pl/developer/banner.json">
+      <a href="./banner.json">
         link do pliku JSON
       </a>
     </p>
