--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zadanie 1 - banner</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Zadania rekrutacyjne</title>
 </head>
 
 <body>
