Add seconds to time counter

--- a/zadanie-3/index.html
+++ b/zadanie-3/index.html
@@ -23,6 +23,7 @@
       <li>Czas promocji liczony jest od północy do północy.</li>
       <li>Licznik ma uwzględniać aktualny czas z dnia, w którym rozpoczęto odliczanie, 
       więc odejmuje czas, który upłynął od północy dnia bieżącego do chwili bieżącej.</li>
+      <li>Dodałam też analogiczne rozwiązanie z pozycją sekund (DD-HH-MM-SS) - można ją łatwo usunąć, ale lepiej widać działanie licznika.</li>
     </ol>
   </section>
   <main class="demo"></main>
